# blazingly-fasb

./: .gitignore  LAB_SETUP.md  README.md  fasb_benchmark.py  fasb_benchmark_runner.py  fasb_experiment.py  fasb_parser.py  fasb_preprocess.py  fasb_script.fsb  fasb_variables.py  horizons.json  pyproject.toml
benchmarking_script/: README.md  benchmark.py
benchmarking_script/additional_benchmarks/planning/zenotravel/: p03_h14.lp
benchmarking_script/benchmarks/asp/n_queens/: meta.json  n07.lp  n08.lp  n09.lp
benchmarking_script/benchmarks/asp/three_coloring/: meta.json  n10.lp  n12.lp  n14.lp
benchmarking_script/benchmarks/blocks/blocks_4/: horizon07.lp  horizon08.lp  horizon10.lp  meta.json
benchmarking_script/benchmarks/blocks/blocks_5/: horizon13.lp  horizon14.lp  horizon16.lp  meta.json
benchmarking_script/benchmarks/blocks/blocks_6/: horizon10.lp  horizon14.lp  horizon16.lp  meta.json
benchmarking_script/benchmarks/blocks/blocks_7/: horizon20.lp  horizon24.lp  horizon26.lp  meta.json
benchmarking_script/benchmarks/blocks/blocks_8/: horizon26.lp  horizon28.lp  horizon30.lp  meta.json
benchmarking_script/scripts/: all.fsb  counts.fsb  enum.fsb  heavy.fsb  inspect.fsb  loop.fsb  navigate.fsb  onlycounts.fsb  reason.fsb  single_cautious.fsb  single_count.fsb  single_counts.fsb  single_impossibles.fsb  single_solvecount.fsb  single_solvecounts.fsb  unfair.fsb
benchmarks/: probBLOCKS-4-1.lp  probBLOCKS-4-2.lp  probBLOCKS-5-0.lp  probBLOCKS-5-2.lp
cluster/: fasb_environment.py
cluster/benchmarks/: probBLOCKS-4-0.lp  probBLOCKS-5-1.lp
(+52 files in other folders)
