[project]
name = "blazingly-fasb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fasb"]

[build-system]
# hatchling-based
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
fasb = { path = "../fasb", editable = true }

[tool.uv]
package = false